feat(Lotto): 예외 처리 기능 추가